--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@kobalte/core": "^0.13.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "solid-js": "^1.9.5",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
