--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,6 +7,15 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+  },
+  "exclude": [
+    "node_modules",
+    "dist",
+    "jest.config.ts"
+  ],
+  "include": [
+    "src/**/*",
+    "tests/**/*"
+  ]
 }
